--- a/notes/main.tex
+++ b/notes/main.tex
@@ -7,6 +7,8 @@
 \input{defs}
 
 
+\addbibresource{notes.bib}
+
 
 \title{\textbf{Designing Secure Cryptography}}
 
@@ -93,9 +95,12 @@
 
 
 
+\newpage
 
-\bibliographystyle{plain}
-\bibliography{notes}
+\printbibliography
+
+%\bibliographystyle{plain}
+%\bibliography{notes}
 
 
 \end{document}
