--- a/notes/notation.tex
+++ b/notes/notation.tex
@@ -38,8 +38,8 @@ communicating, and reasoning about, probability distributions.
 \paragraph{Pseudocode games.} We fix some pseudocode language to describe
 security models, cryptographic algorithms, and more. Roughly we will follow the
 notational tradition established by Bellare and Rogaway in the
-2000s~\cite{bellare2006security}, but using slightly different syntax/symantecs that are
-based most closely on a treatment from~\cite{ristenpart2011careful}.  Code-based
+2000s~\autocite{bellare2006security}, but using slightly different syntax/symantecs that are
+based most closely on a treatment from~\autocite{ristenpart2011careful}.  Code-based
 games are convenient for more precisely defining probability spaces, which are
 what we use to model security and correctness goals, algorithms, and more.  
 
