--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -296,6 +296,7 @@
 \newcommand{\N}{{{\mathbb N}}}
 \newcommand{\Z}{{{\mathbb Z}}}
 \newcommand{\G}{{{\textnormal G}}}
+\newcommand{\Hgame}{{{\textnormal H}}}
 \newcommand{\bigO}{\calO}
 \newcommand{\goesto}{{\rightarrow}}
 \newcommand{\eqdef}{\stackrel{\rm def}{=}}
@@ -2033,6 +2034,7 @@
 
 \newcommand{\TKR}{\textnormal{TKR}} % security game for key recovery
 \newcommand{\Fn}{\textnormal{Fn}}
+\newcommand{\FnSim}{\textnormal{FnSim}}
 \newcommand{\AdvTKR}[2]{\Adv^{\mathrm{tkr}}_{#1}(#2)}
 
 \newcommand{\KR}{\textnormal{KR}} % security game for key recovery
@@ -2054,6 +2056,7 @@
 
 \newcommand{\Feistel}{\cipher}
 
+\newcommand{\myInd}{\hspace*{1em}}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
