--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -2038,6 +2038,8 @@
 \newcommand{\FnSim}{\textnormal{FnSim}}
 \newcommand{\AdvTKR}[2]{\Adv^{\mathrm{tkr}}_{#1}(#2)}
 
+\newcommand{\eks}{\textnormal{eks}}
+
 \newcommand{\KR}{\textnormal{KR}} % security game for key recovery
 \newcommand{\AdvKR}[2]{\Adv^{\mathrm{kr}}_{#1}(#2)}
 
