--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -99,3 +99,12 @@
   year={2003}
 }
 
+@inproceedings{bellare2006multi,
+	title={Multi-property-preserving hash domain extension and the EMD transform},
+	author={Bellare, Mihir and Ristenpart, Thomas},
+	booktitle={International Conference on the Theory and Application of Cryptology and Information Security},
+	pages={299--314},
+	year={2006},
+	organization={Springer}
+}
+
