--- a/notes/ciphers-draft.tex
+++ b/notes/ciphers-draft.tex
@@ -24,12 +24,13 @@ Both $\cipherE$ and $\cipherD$ must be efficiently computable for all $K \in
 informally.) We require that a cipher be correct, meaning that
 $\forall M \in \msgspace, \forall K \in \keyspace, \cipherD_K(\cipherE_K(M)) = M$.
 
-\paragraph{Example.} One simple example of a cipher is the \textbf{one-time pad} (OTP). Let $\keyspace = \msgspace=\ctxtspace=\{0,1\}^n$ for some $n \in \N$. Then we define OTP as follows:
+\begin{example} One simple example of a cipher is the \textbf{one-time pad} (OTP). Let $\keyspace = \msgspace=\ctxtspace=\{0,1\}^n$ for some $n \in \N$. Then we define OTP as follows:
 \begin{align*}
 &\cipherE_K(M) = M \oplus K \\
 &\cipherD_K(C) = C \oplus K
 \end{align*}
 Claude Shannon proved that OTP is perfectly secure in 1949 \cite{shannon1949communication}.
+\end{example}
 
 \paragraph{Security notions.} What do we intuitively expect of a cipher?
 Minimally:
@@ -71,7 +72,7 @@ We must now ask ourselves how well TKR captures the security of a cipher. Let us
 $\advA$ simply queries for $0^n$, which returns $0^n \oplus K = K$, thereby recovering the challenge key with $\AdvTKR{\cipher}{\advA} = 1$. This then means that OTP is actually insecure according to the TKR security definition. But as we noted earlier, OTP is considered secure! Our definition then fails to capture the security of OTP. 
 
 Now consider the identity cipher $\cipherE_{K}(M) = M$ for $\keyspace=\{0,1\}^k$. Since the cipher simply returns the message, no information about the key is included in the ciphertext. The best an adversary can do is return a random key, which has probability $2^{-k}$ of being the correct target key.
-Then for any adversary $\advA$, it holds that $\AdvTKR{\cipher}{\advA} = 2^{-k}$, meaning the identity cipher is secure! Clearly this is not the case, and thus TKR security does not provide message confidentiality. Furthermore, this security notion is ``unfair'' to an adversary, since there can be many keys that are \textit{consistent} on a query transcript. 
+Then for any adversary $\advA$, it holds that $\AdvTKR{\cipher}{\advA} = 2^{-k}$, meaning the identity cipher is secure. Clearly this is not the case, and thus TKR security does not provide message confidentiality. Furthermore, this security notion is ``unfair'' to an adversary, since there can be many keys that are \textit{consistent} on a query transcript. 
 
 \begin{figure}[p]
 	\centering
@@ -100,76 +101,39 @@ We then look at a different notion called \textbf{key recovery security} (KR). U
 \AdvKR{\cipher}{\advA} = \Prob{\KR^\advA_\cipherE \Rightarrow\true}  \;.
 \enm
 
-\paragraph{Comparing security definitions.} We can formally compare security definitions. To show that some definition DEF1 does not imply another definition DEF2, we can show a \textit{counter-example}. This requires producing a scheme such that we can show that no (reasonable) DEF1-adversary has a good advantage. We then give a DEF2-adversary that gets good DEF2 advantage.
+How does KR compare to TKR? We now look at how to formally compare security definitions to gain an understanding of the relationship between TKR and KR. 
+
+\paragraph{Comparing security definitions.} To show that some definition DEF1 does not imply another definition DEF2, we can show a \textit{counter-example}. This requires producing a scheme such that we can show that no (reasonable) DEF1-adversary has a good advantage. We then give a DEF2-adversary that does maintain a good DEF2 advantage.
 
 Conversely, to show that DEF1 does imply DEF2, we can show a \textit{reduction}. This requires converting a DEF2-adversary $\advA$ into a DEF1-adversary $\advB$ such that $\advB$'s DEF1 advantage upper bounds $\advA$'s DEF2 advantage. 
 
+\begin{example}
+TKR $\not \Rightarrow$ KR \\
+To show this, we need a counter-example, and in this case we can use the identity cipher $\cipherE_{K}(M) = M$ for $\keyspace=\{0,1\}^k$ and $\msgspace=\{0,1\}^n$. 
+We have already discussed that any adversary cannot get a TKR advantage greater than $2^{-k}$. Next we must provide a KR-adversary that achieves a ``good'' advantage. We construct a KR-adversary $\advA_{KR}$ that simply returns $0^k$. Since $\forall M\in\msgspace, \forall K, K^* \in \keyspace, \cipherE_{K}(M) = \cipherE_{K^*}(M) = M$, $\advA_{KR}$ achieves advantage 1. Thus, we have shown that TKR $\not \Rightarrow$ KR. \qedsym
+\end{example}
 
-\begin{table}
-	\centering
-	\begin{tabular}{c | c}
-		DEF1 $\not \Rightarrow$ DEF2 & We show a counter-example. \\ \hline
-		DEF1 $\Rightarrow$ DEF2 & We show a reduction.
-	\end{tabular}
-\end{table}
-
-\begin{itemize}
-	\item First example: Our simple OTP cipher is not $\TKR$ secure? Go over example: $\advA$
-	queries once on arbitrary message, recovers $K$ by computing $M \oplus C$. This
-	is guaranteed to succeed because $M \oplus C$ uniquely defines $K$. What does
-	this mean? Isn't OTP considered secure? Shannon said so!
-	%
-	\item Second example: Give toy cipher $\cipher$ for which $\TKR_\cipher$ has
-	$\AdvTKR{\cipher}{\advA} = 0$ for any adversary $\advA$. What is it?
-	$\cipherE(K,M) = M$. It is correct 
-	%
-	\item Third example: Exhaustive key search attack against generic
-	cipher. Emphasize that lower-bounding the efficacy of this is not possible in
-	general. Why? Consider toy identity cipher! 
-	%
-	\item Discuss the KR definition. Rules out the
-	identity map as being relevant. Lower-bounding security is 
-	%
-	\item Shannon's perfect secrecy (one-time left-or-right indistinguishability). 
-\end{itemize}
-
-
-\begin{itemize}
-	\item KR security
-	\item (ot-)IND security
-\end{itemize}
-
-
-\begin{figure}[p]
-\fpage{.45}{
-\underline{$\OTIND^\advA_\cipher$}\\[1pt]
-$K \getsr \keyspace$\\
-$b \getsr \bits$\\
-$b' \getsr \advA^\Fn$\\
-Ret $(b = b')$\medskip
-
-\underline{$\Fn(M_0,M_1)$}\\
-$C \gets \cipherE_K(M_b)$\\
-Ret $C$
-}
-\end{figure}
-
-We let $\OTIND_\cipher$-advantage of a $\OTIND_\cipher$-adversary $\advA$ be defined by 
-\bnm
-  \AdvOTIND{\cipher}{\advA} = 2\cdotsm\Prob{\OTIND^\advA_\cipherE \Rightarrow\true} - 1  \;.
-\enm
-
-\bigskip
-\bigskip
-
-
-
+We now ask whether KR $\Rightarrow$ TKR and prove this with the following theorem. 
 
 \begin{theorem}
-Let $\cipher$ be a cipher. For any $\TKR_\cipher$-adversary $\advA$, we give a
-$\KR_\cipher$-adversary $\advB$ such that 
-  $\AdvKR{\cipher}{\advA} = \AdvTKR{\cipher}{\advB}$.
+	\label{thm-tkr-kr}
+	Let $\cipher$ be a cipher. For any $\TKR_\cipher$-adversary $\advA$, we give a
+	$\KR_\cipher$-adversary $\advB$ such that 
+	$\AdvKR{\cipher}{\advA} = \AdvTKR{\cipher}{\advB}$.
 \end{theorem}
+
+\begin{proof}[\thref{thm-tkr-kr}]
+	We are given an adversary $\advA$ that wins the $\TKR_\cipher$ game with advantage $\AdvKR{\cipher}{\advA}$, meaning that $\advA$ will return the target key chosen by the game with probability $\AdvKR{\cipher}{\advA}$. We now want to construct an adversary $\advB$ that wins the $\KR_\cipher$ game and do so with the following.
+	\begin{align*}
+	&\underline{\textbf{adversary } \advB^\Fn} \\
+	&K^* \getsr \advA^\Fn \\
+	&\text{Return } K^* 
+	\end{align*}
+	$\advB$ is given access to its oracle $\Fn$, and it runs $\advA$ using this same oracle. Notice that $\advB$ can simply provide $\advA$ its own oracle because the distribution of outputs for oracle $\Fn$ in game $\TKR_\cipher$ and for oracle $\Fn$ in game $\KR_\cipher$ are equivalent. This is known as an \textit{elementary wrapper}: a reduction that runs an adversary and simulates an oracle in the simplest way possible. 
+	
+	Now $\advA$ returns the precise target key chosen by the game, so $\advB$ returns this key because the target key will always be consistent with all queries. $\AdvTKR{\cipher}{\advB}$ is then the probability that the key returned by $\advA$ is the target key, which is $\AdvKR{\cipher}{\advA}$. $\qedsym$
+\end{proof}
+
 
 In our theorem statements including reductions,  we need to interpret the words
 ``we give a''. We will focus on concrete, specified reductions. That means that
@@ -193,291 +157,182 @@ detail easily.)  When we deviate from this convention we should remark on it.
 
 
 
+\paragraph{Exhaustive key search.} We now ask whether we can lower-bound (T)KR security in general. We do this by providing a \textit{generic} attack, or an attack that works against any cipher. One such generic attack is the exhaustive key search attack. The pseudocode is shown in \figref{fig:eks}. At a high level, this attack simply chooses a message at random, queries the $\Fn$ oracle to get the corresponding ciphertext, and then brute-force searches through the entire keyspace until it finds the key that outputs the correct ciphertext.  
+\begin{figure}[p]
+	\centering
+	\fpage{.45}{
+		\underline{$\advA^\eks_\Fn$}\\[1pt]
+		$M \getsr \msgspace$ \\
+		$C \gets \Fn(M)$ \\
+		For $K^* \in \keyspace$ do: \\
+		\ind If $C = \cipherE(K^*, M)$ then \\
+		\ind\ind Return $K^*$ \\
+		Return $\bot$
+	}
+	\caption{The exhaustive key search attack.}
+	\label{fig:eks}
+\end{figure} 
 
-\begin{theorem}
-Let $\cipher$ be the OTP cipher. Then for any single-query
-$\OTIND_\cipher$-adversary $\advA$ it holds that $\AdvOTIND{\cipher}{\advA} = 0$. \end{theorem}
+We know that $\AdvKR{\cipher}{\advA_\eks} = 1$ since a consistent key is guaranteed to exist. However, notice that finding $\AdvTKR{\cipher}{\advA_\eks}$ is trickier: $\advA_\eks$ might return a consistent key that is not necessarily the target key. For instance, this attack would not work on the identity map cipher since every key is consistent. For ``real'' ciphers, we expect this to be close to 1. 
+The worst-case running time for this attack is $|\keyspace|$, while the expected running time is $|\keyspace|/2$.
 
+\paragraph{Computational security.} Computational security presents a large paradigm shift from previous notions. It focuses on computationally-bound adversaries. For instance, exhaustive key search attack is clearly not computationally efficient and thus considered a weak attack. We measure computational costs by assuming abstract unit costs of (most) operations. This is course-grained but useful for our purposes. 
 
-\begin{theorem}
-Let $\cipher$ be a cipher defined 
-over $(\keyspace,\msgspace,\ctxtspace)$ such that for any $\OTIND_\cipherE$-adversary 
-$\advA$ it holds that $\AdvOTIND{\cipher}{\advA} = 0$. Then $|\keyspace| \ge
-|\msgspace|$. 
-\end{theorem}
+We have shown previously that TKR is not a good security notion, but we now ask whether KR is an improved definition. In particular, the identity cipher has been shown to be secure under TKR security, yet it is insecure under KR security, which is clearly an improvement. However, KR does not imply message confidentiality: it is a necessary but not sufficient goal. We now move on to a very different notion of security.
 
+\paragraph{PRP and PRF security.} A standard goal for cipher security is security in the sense of pseudorandom permutations and/or pseudorandom functions. For simplicity, we will focus on \textbf{block ciphers}, which for keyspace $\keyspace=\{0,1\}^k$ and message space $\msgspace=\{0,1\}^n$ are defined by $\cipherE : \{0,1\}^k \times \{0,1\}^n \to \{0,1\}^n$. Let $Perm(n)$ be the set of all permutations on $n$ bits. Notice that since $|\{0,1\}^n| = 2^n$, then $|Perm(n)| = 2^n!$. Let $Func(n,n)$ be the set of all functions from $\{0,1\}^n \to \{0,1\}^n$. We again note that $|Func(n,n)| = (2^n)^{2^n}$.
 
-\begin{figure}
-\fpage{.45}{
-\underline{$\advA_{\textrm{eks}}$}\\[1pt]
-$C \gets \Fn(M)$\\
-For $K \in \calK$ do:\\
-\ind If $C = \cipherE(K,M)$ then\\
-\ind\ind Return $K$\\
-Return $\bot$
-}
-\end{figure}
+We now define a \textbf{pseudorandom function} (PRF) as a function that is indistinguishable from a random function (RF). At a high level this means that the input-output behavior of some block cipher $\cipherE_K$ ``looks like'' the input-output behavior of a random function. The games for PRF security are provided in \figref{fig:prf}. There are two games defined for PRF security: PRF1 and PRF0. In PRF1, the adversary has access to the $\Fn$ oracle that returns the output from the block cipher $\cipherE_K$. However, in PRF0 the adversary instead receives the output from a random function $\rho$ when it queries the $\Fn$ oracle. The adversary $\advA$ does not know in which game it is playing and must query the $\Fn$ oracle to distinguish between $\cipherE_K$ and $\rho$. $\advA$ returns a bit signifying which game it believes it is in. The PRF advantage for $\advA$ is defined as 
+\begin{equation*}
+\AdvPRF{\cipher}{\advA} = \left| \Prob{\PRF1_\cipher^\advA\Rightarrow 1} 
+- \Prob{\PRF0_\cipher^\advA\Rightarrow1} \right|.
+\end{equation*}
 
-\paragraph{PRPs and PRFs.}
-
-\begin{itemize}
-\item Basic cipher definitions, key recovery attacks
-\item PRP and PRF definitions
-\item PRP/PRF switching lemma
-\begin{itemize}
-  \item Incorrect conditioning argument 
-  \item Correct game-playing argument
-\end{itemize}
-\item PRP from PRF constructions: Feistel networks
-\item Luby-Rackoff proof
-\end{itemize}
-
+The adversary $\advA$ wins if the probability that $\advA$ outputs 1 in game $\PRF1_\cipher^\advA$ is far greater than the probability that it outputs 1 in game $\PRF0_\cipher^\advA$. In particular, notice that if $\advA$ simply always output 1, $\AdvPRF{\cipher}{\advA}$ would be 0 as expected, since $\advA$ did not successfully distinguish $\cipher$ from a random function. 
 
 \begin{figure}
-\fpage{.15}{
-\underline{$\PRP_{\cipher}^\advA$}\\
-$b \getsr \bits$\\
-$K \getsr \keyspace$\\
-$\pi \getsr \Perm(n)$\\
-$b' \getsr \advA^\Fn$\\
-Return $(b = b')$\medskip
+	\centering
+	\hfpages{.25}{
+		\underline{$\PRF1_{\cipher}^\advA$}\\
+		$K \getsr \keyspace$\\
+		$b' \getsr \advA^\Fn$\\
+		Return $b'$\medskip
+		
+		\underline{$\Fn(M)$}\\
+		Return $\cipherE_K(M)$\\
+	}{
+		\underline{$\PRF0_{\cipher}^\advA$}\\
+		$\rho \getsr \Func(n,n)$\\
+		$b' \getsr \advA^\Fn$\\
+		Return $b'$\medskip
+		
+		\underline{$\Fn(M)$}\\
+		Return $\rho(M)$\\
+	}	
+\caption{The PRF security games.}
+\label{fig:prf}
+\end{figure} 
 
-\underline{$\Fn(M)$}\\
-If $b = 1$ then\\
-\ind Return $\cipherE_K(M)$\\
-Return $\pi(M)$
-}
-\end{figure}
+Just as we provided a generic attack for TKR security using the exhaustive key search attack, is there a generic distinguishing attack for any cipher? One interesting observation is that for a given key, a block cipher $\cipherE_K$ is a permutation, meaning that two different inputs could not produce the same output. (If this were not the case, decryption would be impossible.) However, a random function simply chooses outputs at random, so it is entirely possible for two different inputs to produce the same output. The probability of choosing $q$ values at random from $\{0,1\}^n$ and for two of these values to be the same is approximately $\frac{q^2}{2^n}$. This is colloquially known as the \textbf{birthday bound}, since it implies that the number of people expected to produce two individuals with the same birthday is far fewer than what one would expect. 
 
-\bnm
-\AdvPRP{\cipher}{\advA} = 2\cdotsm\Prob{\PRP^\advA_\cipher\Rightarrow\true}- 1
-\enm
+If $\advA$ were to query its $\Fn$ oracle enough times, eventually the probability that a repeat value is produced would be large enough and $\advA$ could then check to see if such a repeat value exists. If it does, then clearly $\advA$ must be in game $\PRF0_{\cipher}^\advA$; otherwise, $\advA$ can assume it is in game $\PRF1_{\cipher}^\advA$. This attack is called the \textbf{birthday attack}. The pseudocode for this adversary is defined below.
+ 
+\begin{center}
+\begin{tabular}{l}
+	\underline{\textbf{adversary} $A^\Fn_{\text{bday}}$} \\
+	Let $M_1, M_2, \cdots, M_q \gets \{0,1\}^n$ be distinct \\
+	For $i=1, \cdots, q$ do $C_i \gets \Fn(M_i)$ \\
+	If $\exists i \neq j$ such that $C_i = C_j$ then return 0 \\
+	Else return 1
+\end{tabular}
+\end{center}
 
-\begin{figure}
-\hfpages{.25}{
-\underline{$\PRP1_{\cipher}^\advA$}\\
-$K \getsr \keyspace$\\
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
-
-\underline{$\Fn(M)$}\\
-Return $\cipherE_K(M)$\\
-}{
-\underline{$\PRP0_{\cipher}^\advA$}\\
-$\pi \getsr \Perm(n)$\\
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
-
-\underline{$\Fn(M)$}\\
-Return $\pi(M)$\\
-}
-
-
-\end{figure}
-
-
-\begin{figure}
-\hfpages{.25}{
-\underline{$\PRF1_{\cipher}^\advA$}\\
-$K \getsr \keyspace$\\
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
-
-\underline{$\Fn(M)$}\\
-Return $\cipherE_K(M)$\\
-}{
-\underline{$\PRF0_{\cipher}^\advA$}\\
-$\rho \getsr \Func(n,n)$\\
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
-
-\underline{$\Fn(M)$}\\
-Return $\rho(M)$\\
-}
-
-
-\end{figure}
+Notice that in game $\PRF1_{\cipher}^\advA$ all output values will be distinct, so $A_{\text{bday}}$ will always return 1 and thus $\Prob{\PRF1_\cipher^\advA\Rightarrow 1}=1$. The probability that $A_{\text{bday}}$ returns 1 in game $\PRF0_{\cipher}^\advA$ is the probability that all values chosen at random from the random function will be distinct, which is $1 - \frac{q^2}{2^n}$. The PRF-advantage of $A^\Fn_{\text{bday}}$ is then defined as 
+\begin{equation*}
+\AdvPRF{\cipher}{\advA} \geq 1 - \left(1 - \frac{q^2}{2^n}\right) = \frac{q^2}{2^n}.
+\end{equation*}
 
 
 
-\begin{lemma} Let $\cipher$ be a cipher with ciphertext space $\bits^n$. 
-Let $\advA$ be an adversary making at most $q$ queries. Then
-\bnm
-  \left| \Prob{\PRF0_\cipher^\advA\Rightarrow 1} 
-      - \Prob{\PRP0_\cipher^\advA\Rightarrow1} \right| \le \frac{q^2}{2^n}  \;.
-\enm
-\end{lemma}
-
-\begin{align*}
-&\left| \Prob{\PRP0_\cipher^\advA\Rightarrow 1} 
-      - \Prob{\PRF0_\cipher^\advA\Rightarrow1} \right| \\ 
-     &\myInd\myInd\myInd =  \left|\Prob{\G0} - \Prob{\PRF0_\cipher^\advA\Rightarrow1} \right|  \\
-     &\myInd\myInd\myInd  =  \left|\Prob{\G1} - \Prob{\PRF0_\cipher^\advA\Rightarrow1} \right|  \\
-     &\myInd\myInd\myInd  \le \left|\Prob{\G2} + \Prob{\bad_2} - \Prob{\PRF0_\cipher^\advA\Rightarrow1} \right|\\
-     &\myInd\myInd\myInd  = \Prob{\bad_2}\\
-     &\myInd\myInd\myInd  \le \frac{q^2}{2^n}\\
-\end{align*}
-
-\begin{lemma} Let $\G$, $\Hgame$ be games that are identical-until-bad and $y$ be any
-value. Then
-\bnm
-  \big| \Prob{\G\Rightarrow y} 
-      - \Prob{\Hgame\Rightarrow y} \big| \le \Prob{\Hgame\setsbad} = \Prob{\G\setsbad}  \;.
-\enm
-\end{lemma}
-
+We define a \textbf{pseudorandom permutation} (PRP) as a function that is indistinguishable from a random permutation (RP). The games for PRP security are provided in \figref{fig:prp}. These games work similarly to the PRF games but now utilize a random permutation in $\PRP0_\cipher^\advA$ rather than a random function. The PRP advantage for $\advA$ is defined as 
+\begin{equation*}
+\AdvPRP{\cipher}{\advA} = \left| \Prob{\PRP1_\cipher^\advA\Rightarrow 1} 
+- \Prob{\PRP0_\cipher^\advA\Rightarrow1} \right|.
+\end{equation*}
 
 \begin{figure}
-\hfpagess{.20}{.20}{
-\underline{$\G0$}\\[2pt]
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
-
-\underline{$\Fn(M)$}\\
-If $\TabF[M] = \bot$ then\\
-\ind $\TabF[M] \getsr \bits^n \setminus \TabF$\\
-Return $\TabF[M]$
-}{
-\underline{\fbox{$\G1$} \;\;\; $\G2$}\\[2pt]
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
-
-\underline{$\Fn(M)$}\\
-$C \getsr \bits^n$\\
-If $C \in \TabF$ then\\
-\ind $\badtrue$\\
-\ind \fbox{$C \getsr \bits^n \setminus \TabF$}\\
-$\TabF[M] \gets C$\\
-Return $\TabF[M]$
-}
-
-
+	\centering
+	\hfpages{.25}{
+		\underline{$\PRP1_{\cipher}^\advA$}\\
+		$K \getsr \keyspace$\\
+		$b' \getsr \advA^\Fn$\\
+		Return $b'$\medskip
+		
+		\underline{$\Fn(M)$}\\
+		Return $\cipherE_K(M)$\\
+	}{
+		\underline{$\PRP0_{\cipher}^\advA$}\\
+		$\pi \getsr \Perm(n)$\\
+		$b' \getsr \advA^\Fn$\\
+		Return $b'$\medskip
+		
+		\underline{$\Fn(M)$}\\
+		Return $\pi(M)$\\
+	}
+\caption{The PRP security games.}
+\label{fig:prp}	
 \end{figure}
 
+Considering that these notions are similar, can we relate them to each other? Intuitively, there is no difference between a random function and a random permutation when observing only a few input-output pairs. We formalize this intuition with the following lemma. 
 
+\begin{lem}[PRF-PRP Switching Lemma]
+	\label{switching-lem}
+	Let $\cipher$ be a cipher with ciphertext space $\bits^n$. 
+	Let $\advA$ be an adversary making at most $q$ queries. Then
+	\bnm
+	\left| \Prob{\PRF0_\cipher^\advA\Rightarrow 1} 
+	- \Prob{\PRP0_\cipher^\advA\Rightarrow1} \right| \le \frac{q^2}{2^n}  \;.
+	\enm
+\end{lem}
 
-\begin{figure}
-\hfpagessss{.20}{.20}{.20}{.20}{
-\underline{$\G0$}\\[2pt]
-$K \getsr \bits^k$\\
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
+The intuition for the following proof is that if you have oracle access to a random function or a random permutation, then you need to make enough queries to witness a collision, as determined by the birthday bound. 
 
-\underline{$\Fn(LR)$}\\
-$L_1 \gets R$\\
-$R_1 \gets L \oplus F_K(\langle 1\rangle \concat R)$\\
-$L_2 \gets R_1$\\
-$R_2 \gets L_1 \oplus F_K(\langle 2 \rangle \concat R_1)$\\
-$L_3 \gets R_2$\\
-$R_3 \gets L_2 \oplus F_K(\langle 3 \rangle \concat R_2)$\\
-Return $L_3 \concat R_3$
-}{
-\underline{$\G1$}\\[2pt]
-$\rho \getsr \Func(2n,n)$\\
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
+One's first instinct might be to bound the difference using a conditioning argument. For instance, let $\mathsf{Dist}$ be the event that in game $\PRF0_{\cipher}^\advA$ all values returned from oracle $\Fn$ are distinct. Then one might say that $\Prob{\PRP1_\cipher^\advA\Rightarrow 1} =   \Prob{\PRP0_\cipher^\advA\Rightarrow1 | \mathsf{Dist}}$. However, this is incorrect and in fact $\Prob{\PRP1_\cipher^\advA\Rightarrow 1} \neq   \Prob{\PRP0_\cipher^\advA\Rightarrow1 | \mathsf{Dist}}$. Refer to \cite{bellare2006multi} for further technical details. 
 
-\underline{$\Fn(LR)$}\\
-$L_1 \gets R$\\
-$R_1 \gets L \oplus \rho(\langle 1\rangle \concat R)$\\
-$L_2 \gets R_1$\\
-$R_2 \gets L_1 \oplus \rho(\langle 2 \rangle \concat R_1)$\\
-$L_3 \gets R_2$\\
-$R_3 \gets L_2 \oplus \rho(\langle 3 \rangle \concat R_2)$\\
-Return $L_3 \concat R_3$
-}{
-\underline{$\fbox{\G2}$\;\;\;\G3}\\[2pt]
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
+To correctly prove this, we will instead use a game-playing argument. We first provide the following definition and lemma.
 
-\underline{$\Fn(LR)$}\\
-$L_1 \gets R$\\
-If $\TabF[1,R] = \bot$ then\\
-\ind $\TabF[1,R] \getsr \bits^n$\\
-$R_1 \gets L \oplus \TabF[1,R]$\\
-$L_2 \gets R_1$\\
-$X_2 \getsr \bits^n$\\
-If $\TabF[2,R_1] \ne \bot$ then\\
-\ind $\badtrue$\\
-\ind \fbox{$X_2 \gets \TabF[2,R_1]$}\\
-$\TabF[2,R_1] \gets X_2$\\
-$R_2 \gets L_1 \oplus X_2$\\
-$L_3 \gets R_2$\\
-$X_3 \getsr \bits^n$\\
-If $\TabF[3,R_2] \ne \bot$ then\\
-\ind $\badtrue$\\
-\ind \fbox{$X_3 \gets \TabF[2,R_2]$}\\
-$\TabF[3,R_2] \gets X_3$\\
-$R_3 \gets L_2 \oplus X_3$\\
-Return $L_3 \concat R_3$
-}{
-\underline{$\G4$}\\[2pt]
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
+\begin{definition}
+	Games $\G1$ and $\G2$ are \textbf{identical-until-bad} if they both contain a $\bad$ flag and their code differs only in statements following the setting of $\bad$ to $\true$. 
+\end{definition} 
 
-\underline{$\Fn(LR)$}\\
-$L_1 \gets R$\\
-If $\TabF[1,R] = \bot$ then\\
-\ind $\TabF[1,R] \getsr \bits^n$\\
-$R_1 \gets L \oplus \TabF[1,R]$\\
-$L_2 \gets R_1$\\
-If $\TabF[2,R_1] \ne \bot$ then\\
-\ind $\badtrue$\\
-$\TabF[2,R_1] \gets 1$\\
-$R_2 \getsr \bits^n$\\
-$L_3 \gets R_2$\\
-%$X_3 \getsr \bits^n$\\
-If $\TabF[3,R_2] \ne \bot$ then\\
-\ind $\badtrue$\\
-$\TabF[3,R_2] \gets 1$\\
-$R_3 \getsr \bits^n$\\
-Return $L_3 \concat R_3$
-}
-\end{figure}
+\begin{lem}[Fundamental Lemma of game playing \cite{bellare2006security}]
+	Let $\G$, $\Hgame$ be games that are identical-until-bad and $y$ be any
+	value. Then
+	\bnm
+	\big| \Prob{\G\Rightarrow y} 
+	- \Prob{\Hgame\Rightarrow y} \big| \le \Prob{\Hgame\setsbad} = \Prob{\G\setsbad}  \;.
+	\enm
+\end{lem}
 
-\begin{figure}
-\fpage{.25}{
-\underline{$\advB^\Fn$}\\[2pt]
-$K \getsr \bits^k$\\
-$b' \getsr \advA^\FnSim$\\
-Return $b'$\medskip
-
-\underline{$\FnSim(LR)$}\\
-$L_1 \gets R$\\
-$R_1 \gets L \oplus \Fn(\langle 1\rangle \concat R)$\\
-$L_2 \gets R_1$\\
-$R_2 \gets L_1 \oplus \Fn(\langle 2 \rangle \concat R_1)$\\
-$L_3 \gets R_2$\\
-$R_3 \gets L_2 \oplus \Fn(\langle 3 \rangle \concat R_2)$\\
-Return $L_3 \concat R_3$
-}
-\end{figure}
-
-\newpage
-
-\begin{theorem}
-Let $\Feistel$ be the 3-round Feistel cipher using round function 
-$F\Colon\bits^k\times\bits^n\rightarrow \bits^n$. For any
-$\PRP_\cipher$-adversary $\advA$ making at most $q$ queries 
-we give an $\PRF_F$-adversary $\advB$ making at most $3q$ queries such that
-\bnm
-  \AdvPRP{\Feistel}{\advA} \le \AdvPRF{F}{\advB} + \frac{2q^2}{2^n} +
-  \frac{q^2}{2^{2n}} \;.
-\enm
-\end{theorem}
-
-
-
-\begin{align*}
-\AdvPRP{\cipher}{\advA} 
-    &= \left|\Prob{\PRP1^\advA_\cipher} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &= \left|\Prob{\G0} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &\le \left|\Prob{\G1} + \AdvPRF{F}{\advB} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &=   \left|\Prob{\G2} + \AdvPRF{F}{\advB} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &\le \left|\Prob{\G3} + \Prob{\bad_3} + \AdvPRF{F}{\advB} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &= \left|\Prob{\G4} + \Prob{\bad_4} + \AdvPRF{F}{\advB} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &\le \left|\Prob{\PRP0^\advA_\cipher} + \frac{q^2}{2^{2n}} + \Prob{\bad_4} + \AdvPRF{F}{\advB} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &= \frac{q^2}{2^{2n}} + \Prob{\bad_4} + \AdvPRF{F}{\advB}\\
-    &\le \frac{q^2}{2^{2n}} + \frac{2q^2}{2^n} + \AdvPRF{F}{\advB}\\
-\end{align*}
-
+\begin{proof}[\lemref{switching-lem}]
+	 We define the games in \figref{fig:switching}. Notice that the output from game $\G0$ has an identical distribution to that of game $\PRP0_\cipher^\advA$. The only difference between them is that game $\PRP0_\cipher^\advA$ chooses a random permutation and returns the output from that, while game $\G0$ chooses unique values at random as $\advA$ makes queries to $\Fn$. Then $\Prob{\PRP0_\cipher^\advA\Rightarrow1} = \Prob{\G0}$. Game $\G1$ includes the boxed statement and also has an identical output distribution to that of game $\G0$. It simply chooses an output value at random, and if it detects a repeat it then chooses another unique value. In the case of a repeat, it also sets the $\bad$ flag to $\true$. We then have that $\Prob{\G1} = \Prob{\G0}$. We next transition to game $\G2$ and notice that $\G1$ and $\G2$ are \textbf{identical-until-bad}. The Fundamental Lemma of game playing then states that $\Prob{\G1} \leq \Prob{\G2} + \Prob{\bad \text{ set to } \true}$. Game $\G2$ returns values chosen at random and allows for repeat values, so it has an identical output distribution to $\PRF0_\cipher^\advA$. This means $\Prob{\PRF0_\cipher^\advA\Rightarrow1} = \Prob{\G2}$. Finally, the probability that $\bad$ is set to $\true$ is the probability that a random value is chosen by $\Fn$ such that it is not distinct, which is bounded by the birthday bound. We then have the following:
+	 
+	 \begin{figure}
+	 	\centering
+	 	\hfpagess{.20}{.20}{
+	 		\underline{$\G0$}\\[2pt]
+	 		$b' \getsr \advA^\Fn$\\
+	 		Return $b'$\medskip
+	 		
+	 		\underline{$\Fn(M)$}\\
+	 		If $\TabF[M] = \bot$ then\\
+	 		\ind $\TabF[M] \getsr \bits^n \setminus \TabF$\\
+	 		Return $\TabF[M]$
+	 	}{
+	 		\underline{\fbox{$\G1$} \;\;\; $\G2$}\\[2pt]
+	 		$b' \getsr \advA^\Fn$\\
+	 		Return $b'$\medskip
+	 		
+	 		\underline{$\Fn(M)$}\\
+	 		$C \getsr \bits^n$\\
+	 		If $C \in \TabF$ then\\
+	 		\ind $\badtrue$\\
+	 		\ind \fbox{$C \getsr \bits^n \setminus \TabF$}\\
+	 		$\TabF[M] \gets C$\\
+	 		Return $\TabF[M]$
+	 	}
+	 	\caption{The games for the switching lemma (\lemref{switching-lem}).}
+	 	\label{fig:switching}	
+	 \end{figure} 
+	 
+	 \begin{align*}
+	 &\left| \Prob{\PRP0_\cipher^\advA\Rightarrow 1} 
+	 - \Prob{\PRF0_\cipher^\advA\Rightarrow1} \right| \\ 
+	 &\myInd\myInd\myInd =  \left|\Prob{\G0} - \Prob{\PRF0_\cipher^\advA\Rightarrow1} \right|  \\
+	 &\myInd\myInd\myInd  =  \left|\Prob{\G1} - \Prob{\PRF0_\cipher^\advA\Rightarrow1} \right|  \\
+	 &\myInd\myInd\myInd  \le \left|\Prob{\G2} + \Prob{\bad \text{ set to } \true} - \Prob{\PRF0_\cipher^\advA\Rightarrow1} \right|\\
+	 &\myInd\myInd\myInd  = \Prob{\bad \text{ set to } \true}\\
+	 &\myInd\myInd\myInd  \le \frac{q^2}{2^n} \\
+	 \end{align*} 
+	 $\qedsym$
+\end{proof}
