added slides for Feb 4 lecture

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -2055,7 +2055,10 @@
 
 
 \newcommand{\Feistel}{\cipher}
+\newcommand{\Maj}{\textnormal{Maj}}
 
+\newcommand{\EM}{\textnormal{EM}}
+\newcommand{\Sbox}{\textnormal{Sbox}}
 \newcommand{\myInd}{\hspace*{1em}}
 %%% Local Variables:
 %%% mode: latex
