--- a/notes/main.tex
+++ b/notes/main.tex
@@ -90,14 +90,14 @@
 \input{intro}
 \newpage
 \input{notation}
-\newpage
-\input{ciphers}
+%\newpage
+%\input{ciphers}
 \newpage
 \input{ciphers-draft}
 \newpage
 \input{cryptanalysis}
-
-
+\newpage
+\input{freqanalysis}
 
 \newpage
 
