fixed compile error

--- a/notes/freqanalysis.tex
+++ b/notes/freqanalysis.tex
@@ -69,7 +69,7 @@ $\Time(\advA) + 2q+q\cdotsm\Time(\mdist)$.
 \enm
 
 Let $\Perm(\tweakspace,\msgspace$ be set of all functions
-$\tweakspace\times\msgspace\rightarrow\msgspace$ for which $
+$\tweakspace\times\msgspace\rightarrow\msgspace$ for which 
 
 \hfpages{.15}{
 		\underline{$\TPRP1_{\tweakCipher}^\advA$}\\
