--- a/notes/prp/feistel.tex
+++ b/notes/prp/feistel.tex
@@ -98,7 +98,7 @@ Figure~\ref{fig:feistel-3} depicts a 3-round Feistel network constructed in this
     \def\lastz{0}
     \foreach \z[remember=\z as \lastz] in {1, 2,...,3} {
       \node[draw,thick,minimum width=0.75cm] (\prf\z) [below of = r\lastz, node distance=1.1cm]  {$\prf_{\prfkey}$};
-      \node (ctr\z) [right of = \prf\z, node distance=1.25cm] {$\langle\z\rangle$};
+      \node (ctr\z) [right of = \prf\z, node distance=1.25cm] {$\bm{\langle}\z\bm{\rangle}$};
       \node (xor\z) [XOR, below of = \prf\z, node distance = 0.75cm, scale=1.0] {};
       \node (junction0\z) [below of = r\lastz, node distance = 0.5cm] {};
       \node (junction1\z) [below of = l\lastz, node distance = 0.75cm] {};
@@ -126,239 +126,3 @@ Figure~\ref{fig:feistel-3} depicts a 3-round Feistel network constructed in this
 \begin{example} A 2-round Feistel network is not a PRP.
   \scribenote{Add as homework problem}
 \end{example}
-
-\paragraph{3-round Feistel network is a PRP}
-Next, we show that given PRF security of the underlying round function, a 3-round Feistel network is a PRP.
-\scribenote{Intuition?}
-
-\begin{theorem}[Luby-Rackoff]\label{thm:luby-rackoff}
-Let $\Feistel$ be the 3-round Feistel cipher using round function
-$\prf\Colon\bits^k\times\bits^{2n}\rightarrow \bits^n$. For any
-$\PRP_\cipher$-adversary $\advA$ making at most $q$ queries
-we give an $\PRF_{\prf}$-adversary $\advB$ making at most $3q$ queries such that
-\bnm
-  \AdvPRP{\Feistel}{\advA} \le \AdvPRF{\prf}{\advB} + \frac{2q^2}{2^n} +
-  \frac{q^2}{2^{2n}} \;.
-\enm
-\end{theorem}
-\scribenote{How are we doing cites? (Luby-Rackoff)}
-
-\begin{proof}
-Without loss of generality, we consider $\advA$ that make only unique queries to oracle $\Fn$.
-We bound the advantage of $\PRP$ adversary $\advA$ by bounding the advantage of each of a series of game hops.
-Pseudocode for the games is given in Figure~\ref{fig:games-luby-rackoff}.
-Intuitively, the proof will follow the intuition that if the round function can be considered as a random function, then barring \scribenote{Add intuition}.
-
-Game $\G0$ is constructed exactly as $\PRP1^{\advA}_{\Feistel}$; the oracle pseudocode expands out the computation of the 3-round Feistel network $\Feistel$.
-\bnm
-\Prob{\PRP1_\Feistel^\advA\Rightarrow 1} = \Prob{\G0\Rightarrow 1}
-\enm
-Game $\G1$ replaces the round function $\prf$ with a random function $\randfn$ mapping from $\braces{0,1}^{2n}\rightarrow\braces{0,1}^n$.
-\scribenote{Should PRF security game be defined with respect to different domain and range space, $m$ and $n$?}
-We bound the ability to distinguish between $\G0$ and $\G1$ by the PRF security of $\prf$.
-Consider the following PRF adversary $\advB$ which runs $\advA$ with a simulated oracle $\FnSim$.
-
-\begin{center}
-\fpage{.22}{
-\underline{$\advB^\Fn$}\\[2pt]
-$K \getsr \bits^k$\\
-$b' \getsr \advA^\FnSim$\\
-Return $b'$\medskip
-
-\underline{$\FnSim(\msg)$}\\
-$L_1 \gets R_0$\\
-$R_1 \gets L_0 \oplus \Fn(\langle 1\rangle \concat R_0)$\\
-$L_2 \gets R_1$\\
-$R_2 \gets L_1 \oplus \Fn(\langle 2\rangle \concat R_1)$\\
-$L_3 \gets R_2$\\
-$R_3 \gets L_2 \oplus \Fn(\langle 3\rangle \concat R_2)$\\
-Return $L_3 \concat R_3$
-}
-\end{center}
-
-Adversary $\advB$ simulates $\FnSim$ by running the 3-round Feistel network but replacing the round function with a call to its own oracle $\Fn$.
-In \PRF0, where $\advB$'s oracle $\Fn$ acts as the round function $\prf$, $\advB$ runs exactly $\G0$.
-In \PRF1, where $\Fn$ acts as a random function $\rho$, $\advB$ runs exactly $\G1$.
-Thus, we have
-\begin{align*}
-\AdvPRF{\prf}{\advB} &= \absv*{\Prob{\PRF1_\prf^\advB\Rightarrow 1} - \Prob{\PRF0_\prf^\advB\Rightarrow1}}\\
-&= \absv*{\Prob{\G1\Rightarrow 1} - \Prob{\G0\Rightarrow1}}\\
-\end{align*}
-
-In games $\G2$ and $\G3$, we use a similar trick to as in our proof of the PRF-PRP Switching Lemma.
-Game $\G2$ replaces the random function $\rho$ with a lazy evaluation of a random function using a table $\TabF$.
-When the random function is queried on an input, the value in $\TabF$ keyed by the input is returned.
-If there is no such value, meaning the input has not been previously queried, a new random value is generated, returned, and stored in $\TabF$ for future queries.
-Thus, lazily building out $\TabF$ is equivalent to using random function $\rho$.
-\bnm
-\Prob{\G1\Rightarrow 1} = \Prob{\G2\Rightarrow 1}
-\enm
-
-Game $\G3$ generates fresh random values on every input to the second and third round functions.
-This is in contrast to $\G2$ where a fresh random value is only returned for inputs that have never been seen.
-Thus, the difference between $\G2$ and $\G3$ occur when repeat inputs are used with the second or third round functions, which corresponds to repeat values of $R_1$ and $R_2$, respectively.
-Intuitively, since we are only considering adversaries $\advA$ that make unique queries to $\Fn$, finding repeat values of $R_1$ and $R_2$ is hard because they both include randomness from the random function.
-The pseudocode in Figure~\ref{fig:games-luby-rackoff} captures the event of a repeat query by a setting a $\bad$ flag.
-The only difference between $\G2$ and $\G3$ occur after the $\bad$ flag is set; $\G2$ returns the consistent value from the look-up table $\TabF$, while $\G3$ returns a fresh random value.
-Then by the fundamental lemma of game-playing,
-\bnm
-\absv*{\Prob{\G3\Rightarrow 1} - \Prob{\G2\Rightarrow1}} \le \Prob{\G3 \setsbad}
-\enm
-
-If we assume $\advA$ makes at most $q$ queries to $\Fn$, we can bound the probability $\G3\setsbad$.
-The probability of $R_1 = L_0 \xor \TabF[1,R_0]$ colliding with a previous $R_1$ on query $i$ is bounded by $q/2^n$.
-\scribenote{Problem: I think it is a much more complicated argument to say $R_1$ is random, since $\TabF[1,R_0]$ is not fresh every time. Need to argue something about no information of $\TabF[1,R_0]$ is output.}
-\scribenote{Probably has connection to Luby-Rackoff Revisited [Naor-Reingold]}
-\scribenote{Boneh-Shoup book seems to address this challenge with an independence argument.}
-Similarly, the probability of $R_2 = L_0 \xor X_2$ colliding with a previous $R_2$ on query $i$ is bounded by $q/2^n$ since $X_2$ is a fresh random string.
-Thus, by two applications of the union bound, we have
-\begin{align*}
-  \Prob{\G3 \setsbad} &= \Prob{R_1 \text{ collides } \vee R_2 \text{ collides }}
-\end{align*}
-
-Game $\G4$ is the same as $\G3$ except $R_2$ and $R_3$ are set to fresh random values.
-In $\G3$,
-
-\begin{align*}
-\AdvPRP{\cipher}{\advA}
-    &= \left|\Prob{\PRP1^\advA_\cipher} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &= \left|\Prob{\G0} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &\le \left|\Prob{\G1} + \AdvPRF{F}{\advB} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &=   \left|\Prob{\G2} + \AdvPRF{F}{\advB} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &\le \left|\Prob{\G3} + \Prob{\bad_3} + \AdvPRF{F}{\advB} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &= \left|\Prob{\G4} + \Prob{\bad_4} + \AdvPRF{F}{\advB} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &\le \left|\Prob{\PRP0^\advA_\cipher} + \frac{q^2}{2^{2n}} + \Prob{\bad_4} + \AdvPRF{F}{\advB} - \Prob{\PRP0^\advA_\cipher}\right|\\
-    &= \frac{q^2}{2^{2n}} + \Prob{\bad_4} + \AdvPRF{F}{\advB}\\
-    &\le \frac{q^2}{2^{2n}} + \frac{2q^2}{2^n} + \AdvPRF{F}{\advB}\\
-\end{align*}
-
-\end{proof}
-
-
-\begin{figure}[p]
-\hfpagessss{.20}{.20}{.20}{.25}{
-\underline{$\G0$}\\[2pt]
-$K \getsr \bits^k$\\
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
-
-\underline{$\Fn(\msg)$}\\
-$(L_0, R_0) \gets \msg$\\
-$L_1 \gets R_0$\\
-$R_1 \gets L_0 \oplus F_K(\langle 1\rangle \concat R_0)$\\
-$L_2 \gets R_1$\\
-$R_2 \gets L_1 \oplus F_K(\langle 2 \rangle \concat R_1)$\\
-$L_3 \gets R_2$\\
-$R_3 \gets L_2 \oplus F_K(\langle 3 \rangle \concat R_2)$\\
-Return $L_3 \concat R_3$
-}{
-\underline{$\G1$}\\[2pt]
-$\rho \getsr \Func(2n,n)$\\
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
-
-\underline{$\Fn(\msg)$}\\
-$(L_0, R_0) \gets \msg$\\
-$L_1 \gets R_0$\\
-$R_1 \gets L_0 \oplus \rho(\langle 1\rangle \concat R_0)$\\
-$L_2 \gets R_1$\\
-$R_2 \gets L_1 \oplus \rho(\langle 2 \rangle \concat R_1)$\\
-$L_3 \gets R_2$\\
-$R_3 \gets L_2 \oplus \rho(\langle 3 \rangle \concat R_2)$\\
-Return $L_3 \concat R_3$
-}{
-\underline{$\fbox{\G2}$\;\;\;\G3}\\[2pt]
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
-
-\underline{$\Fn(\msg)$}\\
-$(L_0, R_0) \gets \msg$\\
-$L_1 \gets R_0$\\
-If $\TabF[1,R_0] = \bot$ then\\
-\ind $\TabF[1,R_0] \getsr \bits^n$\\
-$R_1 \gets L_0 \oplus \TabF[1,R_0]$\\
-$L_2 \gets R_1$\\
-$X_2 \getsr \bits^n$\\
-If $\TabF[2,R_1] \ne \bot$ then\\
-\ind $\badtrue$\\
-\ind \fbox{$X_2 \gets \TabF[2,R_1]$}\\
-$\TabF[2,R_1] \gets X_2$\\
-$R_2 \gets L_1 \oplus X_2$\\
-$L_3 \gets R_2$\\
-$X_3 \getsr \bits^n$\\
-If $\TabF[3,R_2] \ne \bot$ then\\
-\ind $\badtrue$\\
-\ind \fbox{$X_3 \gets \TabF[3,R_2]$}\\
-$\TabF[3,R_2] \gets X_3$\\
-$R_3 \gets L_2 \oplus X_3$\\
-Return $L_3 \concat R_3$
-}{
-\underline{$\G3$\;\;\;$\fbox{\G4}$}\\[2pt]
-$b' \getsr \advA^\Fn$\\
-Return $b'$\medskip
-
-\underline{$\Fn(\msg)$}\\
-$(L_0, R_0) \gets \msg$\\
-$L_1 \gets R_0$\\
-If $\TabF[1,R_0] = \bot$ then\\
-\ind $\TabF[1,R_0] \getsr \bits^n$\\
-$R_1 \gets L_0 \oplus \TabF[1,R_0]$\\
-$L_2 \gets R_1$\\
-$X_2 \getsr \bits^n$\\
-If $\TabF[2,R_1] \ne \bot$ then\\
-\ind $\badtrue$\\
-$\TabF[2,R_1] \gets X_2$\\
-$R_2 \gets L_1 \oplus X_2$;\;\;\fbox{$R_2 \getsr \bits^n$}\\
-$L_3 \gets R_2$\\
-$X_3 \getsr \bits^n$\\
-If $\TabF[3,R_2] \ne \bot$ then\\
-\ind $\badtrue$\\
-$\TabF[3,R_2] \gets X_3$\\
-$R_3 \gets L_2 \oplus X_3;$\;\;\fbox{$R_3 \getsr \bits^n$}\\
-Return $L_3 \concat R_3$
-}
-\caption{Games for proof of 3-round Feistel network as PRP (Theorem~\ref{thm:luby-rackoff})}
-\label{fig:games-luby-rackoff}
-\end{figure}
-
-\begin{figure}[p]
-\center
-\begin{tikzpicture}
-    \node(r0) at ($(0,0)$)  {$R_0$};
-    \node (l0) [left of = r0, node distance=3.0cm] {$L_0$};
-    \def\lastz{0}
-    \foreach \z[remember=\z as \lastz] in {1, 2,...,3} {
-      \node[draw,thick,minimum width=0.75cm] (\prf\z) [below of = r\lastz, node distance=1.1cm]  {$\prf_{\prfkey}$};
-      \node (ctr\z) [right of = \prf\z, node distance=1.25cm] {$\langle\z\rangle$};
-      \node (xor\z) [XOR, below of = \prf\z, node distance = 0.75cm, scale=1.0] {};
-      \node (junction0\z) [below of = r\lastz, node distance = 0.5cm] {};
-      \node (junction1\z) [below of = l\lastz, node distance = 0.75cm] {};
-      \node (junction2\z) [below of = l\lastz, node distance = 1.5cm] {};
-      \node (junction3\z) [left of = xor\z, node distance = 0.5cm] {};
-      \node (r\z) [below of = xor\z, node distance=0.75cm] {$R_\z$};
-      \node (l\z) [left of = r\z, node distance=3.0cm] {$L_\z$};
-      \path[->]
-        (r\lastz) edge[thick] node {} (\prf\z)
-        (\prf\z) edge[thick] node {} (xor\z)
-        (junction3\z.center) edge[thick] node {} (xor\z)
-        (xor\z) edge[thick] node {} (r\z)
-        (junction2\z.center) edge[thick] node {} (l\z)
-        (ctr\z) edge[thick] node {} (\prf\z.east);
-        \path[-]
-        (l\lastz.south) edge[thick] node {} (junction1\z.center)
-        (junction0\z.center) edge[thick] node {} (junction2\z.center)
-        (junction1\z.center) edge[thick] node {} (junction3\z.center);
-    }
-\end{tikzpicture}
-\end{figure}
-
-\paragraph{Connection to card shuffling algorithms}
-
-\scribenote{Additional Exercise Ideas}
-\begin{itemize}
-  \item 2-round Feistel is not a PRP
-  \item Show security of 3-round Feistel with 3 different keys
-  \item What happens when same key is used across Feistel rounds? (I don't know)
-  \item Show 3-round Feistel is not Strong PRP
-  \item Show 4-round Feistel is Strong PRP
-\end{itemize}
