--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -35,6 +35,7 @@
 \DeclareMathOperator*{\argmin}{arg\,min}
 \usepackage{cleveref}
 \usepackage{bm}
+\usepackage{listings}
 \usepackage{mathtools}
 \allowdisplaybreaks[2]
 \usepackage{latexsym}
